packages/wasm-guest/tests/macro_error/const_parameters.rs
use serpent_automation_wasm_guest::workflow;

#[workflow]
async fn counter<const X: usize>() {}

fn main() {}
